traslado de turno
sigo con el traslado de turno, falta la logica, da error porque no le llega nada todavia y espera algo

--- a/views/secretaria/secretariaTurnos.pug
+++ b/views/secretaria/secretariaTurnos.pug
@@ -57,7 +57,7 @@ html
                 td
                   a(href=`/turnos/detalles/${turno.id}` class="btn-editar") Detalles
                 td
-                  a(href=`/turnos/trasladar/${turno.id}` class="btn-trasladar") Trasladar turno
+                  a(href=`/turnos/trasladar/${turno.id}` class="btn-editar") Trasladar turno
             else
               p No hay turnos disponibles
     include ../includes/footer
