avances en traslado de turnos

--- a/views/secretaria/secretariaTrasladar.pug
+++ b/views/secretaria/secretariaTrasladar.pug
@@ -1,26 +1,34 @@
 doctype html
 html(lang="es")
     head
-        meta(charset="utf-8")
-        meta(name="viewport", content="width=device-width, initial-scale=1.0")
         title Secretaria - Trasladar
-        link(rel="stylesheet", href="/stylesheets/style.css")
+        link(rel="stylesheet" href="/css/secretariaGestionTurno.css")
+        link(rel="stylesheet" href="/css/footer.css")
+        link(rel="stylesheet" href="/css/headerSecretaria.css")
+        link(rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css")
     body
         include ../includes/headerSecretaria
         h1 Trasladar Turno
-        form(action=`/turnos/trasladar/${turno.id}` method="POST")
-            label(for="medico") Seleccione el médico:
-            select(name="medico" id="medico" required)
-            option(value="" disabled selected) -- Seleccione un médico --
-            each medico in medicos
-                option(value=medico.id)= medico.nombre
-            label(for="horario") Seleccione el horario:
-            select(name="horario" id="horario" required)
-            option(value="" disabled selected) -- Seleccione un horario --
-            //- Los horarios se deben cargar dinámicamente según el médico seleccionado
+        form(method="POST" action="/turnos/trasladar" class="formTurnos")
+            h3 Selecciona un Profesional
+            if profesionales && profesionales.length
+                select(name="profesional_especialidad_id" id="profesional" required)
+                    option(value="" selected disabled) Selecciona un profesional
+                        each profesional in profesionales
+                            option(value=profesional.id)= `${profesional.id}  ${profesional.nombre_completo} / ${profesional.especialidad}`
+            else
+                p no se encontraron profesionales
+            label(for="fecha") Selecciona la fecha:
+            input(type="text" name="fecha" id="fecha" required)
+            label(for="horario") Selecciona un horario:
+            select(name="hora" id="horario" required)
+                option(value="" selected disabled) Selecciona un horario
+            label(for="detalle_turno") Detalle del turno:
+            textarea(name="detalle_turno" id="detalle_turno" rows="4" placeholder="Detalles adicionales del turno" required)
+            input(type="hidden" name="estado" value="Confirmado")
             button(type="submit") Trasladar Turno
-        main
-            block content
         a(href="/turnos/listarTurnos") ← Volver a turnos
         include ../includes/footer
         script(src="/js/logout.js")
+        script(src="/js/horarios.js")
+        script(src="https://cdn.jsdelivr.net/npm/flatpickr")
