--- a/views/includes/headerSecretaria.pug
+++ b/views/includes/headerSecretaria.pug
@@ -6,7 +6,7 @@ header
           li: a(href="/turnos/listarTurnos") Ver Turnos
           li: a(href="/secretaria/crearListaEspera") Crear espera
           li: a(href="/secretaria/listarEspera") Lista de espera
-          li: a(href="/secretaria/gestionTurno") Gestionar Turnos
+          li: a(href="/secretaria/gestionTurno") Crear Turno
           li: a(href="/agendas/crear") Crear Agenda
           li: a(href="/agendas/ausencias/form") Cargar/Borrar Ausencia
           li: a(href="javascript:void(0);" id="logoutButton") Cerrar Sesión
