--- a/views/secretaria/secretariaTrasladar.pug
+++ b/views/secretaria/secretariaTrasladar.pug
@@ -9,7 +9,7 @@ html(lang="es")
     body
         include ../includes/headerSecretaria
         h1 Trasladar Turno
-        form(method="POST" action="/turnos/trasladar" class="formTurnos")
+        form(method="POST" action=`/turnos/trasladar/${turno.id}` class="formTurnos")
             h3 Selecciona un Profesional
             if profesionales && profesionales.length
                 select(name="profesional_especialidad_id" id="profesional" required)
