--- a/views/secretaria/secretariaListaEspera.pug
+++ b/views/secretaria/secretariaListaEspera.pug
@@ -31,7 +31,7 @@ html
                 td= item.nombre_medico
                 td= item.especialidad
                 td
-                      button.btn-eliminar(type="button" data-id=item.id) Eliminar
+                      button.btn-eliminar(type="button" data-id=item.id class="btn-eliminar") Eliminar
       else
         p No hay pacientes en lista de espera.
 
