--- a/public/css/secretariaTurnos.css
+++ b/public/css/secretariaTurnos.css
@@ -26,9 +26,9 @@ h2 {
 
 
 .sectionMain {
-  max-width: 1000px;
-  margin: 0 auto;
-  width: 100%;
+  max-width: 1300px;
+  margin: 0 auto 40px 40px;
+  width: calc(100% - 80px);
   background-color: #fff;
   border-radius: 10px;
   padding: 25px 30px;
@@ -36,9 +36,11 @@ h2 {
 }
 
 
+
 .tableTurnos {
   width: 100%;
   border-collapse: collapse;
+  table-layout: fixed;
   font-size: 0.95rem;
 }
 
@@ -127,3 +129,11 @@ h2 {
   background-color: #0056b3;
 }
 
+
+.dni-foto {
+  width: 70px;
+  height: auto;
+  border-radius: 4px;
+  object-fit: cover;
+  display: block;
+}
