--- a/views/secretaria/secretariaEditarTurno.pug
+++ b/views/secretaria/secretariaEditarTurno.pug
@@ -13,14 +13,9 @@ html
       ul.detalle-turno
         li Paciente: #{turno.paciente_nombre}
         li DNI: #{turno.dni}
-        li Obra social: #{turno.obra_social}
-        li Teléfono: #{turno.telefono}
-        li Profesional: #{turno.nombre_medico}
-        li Especialidad: #{turno.especialidad}
-        li Sucursal: #{turno.sucursal}
+        li Profesional: #{turno.nombre_medico} / #{turno.especialidad}
         li Fecha: #{turno.fechaFormateada}
         li Hora: #{turno.horaFormateada}
-        li Observaciones: #{turno.detalle_turno}
         li
           label(for="estado") Estado:
           select(name="estado" id="estado" required)
