--- a/views/secretaria/secretariaTurnos.pug
+++ b/views/secretaria/secretariaTurnos.pug
@@ -53,7 +53,7 @@ html
                     p Foto no disponible
                 td= turno.estado
                 td
-                  a(href=`/turnos/editarTurno/${turno.id}` class="btn-editar") Editar
+                  a(href=`/turnos/editarTurno/${turno.id}` class="btn-editar") Cambiar estado
                 td
                   a(href=`/turnos/detalles/${turno.id}` class="btn-editar") Detalles
                 td
