--- a/public/css/secretariaTurnos.css
+++ b/public/css/secretariaTurnos.css
@@ -7,6 +7,7 @@ body {
   min-height: 100vh;
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
 
 
@@ -26,9 +27,7 @@ h2 {
 
 
 .sectionMain {
-  max-width: 1300px;
-  margin: 0 auto 40px 40px;
-  width: calc(100% - 80px);
+  max-width: 90vw;
   background-color: #fff;
   border-radius: 10px;
   padding: 25px 30px;
@@ -49,11 +48,18 @@ h2 {
   color: #fff;
 }
 
+.tableTurnos th {
+  padding: 12px 16px;
+  text-align: center;
+  font-weight: bold;
+  border-bottom: 2px solid #2980b9;
+}
+
 .tableTurnos th,
 .tableTurnos td {
   padding: 12px 16px;
   border: 1px solid #ddd;
-  text-align: left;
+  text-align: center;
 }
 
 .tableTurnos tr:nth-child(even) {
