mejoras css y nuevo home secre
mejorando el css, poniendo mas clases y algo de responsive, y en secretaria cuando iniciamos nos lleva a la vista de ver turnos

--- a/public/css/headerSecretaria.css
+++ b/public/css/headerSecretaria.css
@@ -1,4 +1,4 @@
-header {
+.headerSecre {
   width: 95%;
   display: flex;
   justify-content: space-between;
@@ -8,13 +8,13 @@ header {
 }
 
 
-.logoHeader {
+.logoHeaderSecre {
   width: 100px;
   height: 100px;
 }
 
 
-.ulHeader {
+.ulHeaderSecre {
   display: flex;
   gap: 25px;
   list-style: none;
@@ -22,7 +22,7 @@ header {
   padding: 0;
 }
 
-.ulHeader li a {
+.ulHeaderSecre .liHeaderSecre .aLiHeaderSecre {
   text-decoration: none;
   color: #333;
   font-weight: 500;
@@ -30,6 +30,45 @@ header {
   transition: color 0.2s;
 }
 
-.ulHeader li a:hover {
+.ulHeaderSecre .liHeaderSecre .aLiHeaderSecre:hover {
   color: #3498db;
+}
+
+@media (max-width: 768px) {
+  .headerSecre {
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 10px 10px;
+  }
+
+  .logoHeaderSecre {
+    width: 70px;
+    height: 70px;
+    margin-bottom: 10px;
+  }
+
+  .ulHeaderSecre {
+    flex-direction: column;
+    gap: 15px;
+    width: 100%;
+  }
+
+  .ulHeaderSecre .liHeaderSecre .aLiHeaderSecre {
+    font-size: 15px;
+  }
+}
+
+@media (max-width: 480px) {
+  .headerSecre {
+    padding: 8px 5px;
+  }
+
+  .logoHeaderSecre {
+    width: 50px;
+    height: 50px;
+  }
+
+  .ulHeaderSecre .liHeaderSecre .aLiHeaderSecre {
+    font-size: 14px;
+  }
 }
