--- a/views/includes/footer.pug
+++ b/views/includes/footer.pug
@@ -2,12 +2,12 @@ footer(class="footer")
             section(class="sectionFooter")
                 article(class="articleFooter") 
                     span(class="spanFooter") Nuestros GitHub
-                    ul
-                        li: a(href="https://github.com/JuanCarrillo2435") Carrillo Juan
-                        li: a(href="https://github.com/MiguelLuceroSL") Lucero Miguel
+                    ul(class="ulFooter")
+                        li(class="liFooter"): a(href="https://github.com/JuanCarrillo2435" class="aLiFooter") Carrillo Juan
+                        li(class="liFooter"): a(href="https://github.com/MiguelLuceroSL" class="aLiFooter") Lucero Miguel
                 img(src="/img/agenda.png", alt="" class="logoFooter")
                 article(class="articleFooter") 
                     span(class="spanFooter") Nuestros LinkedIn
-                    ul
-                        li: a(href="https://github.com/JuanCarrillo2435") Carrillo Juan
-                        li: a(href="https://www.linkedin.com/in/lucero-roque-roberto-miguel-2122bb251/") Lucero Miguel
+                    ul(class="ulFooter")
+                        li(class="liFooter"): a(href="https://github.com/JuanCarrillo2435" class="aLiFooter") Carrillo Juan
+                        li(class="liFooter"): a(href="https://www.linkedin.com/in/lucero-roque-roberto-miguel-2122bb251/" class="aLiFooter") Lucero Miguel
