--- a/views/includes/headerSecretaria.pug
+++ b/views/includes/headerSecretaria.pug
@@ -1,12 +1,11 @@
-header
-      link(rel="stylesheet" href="/css/headerSecretaria.css")
-      a(href="http://localhost:3000/secretaria/home" rel="noopener noreferrer"): img(src="/img/agenda.png" alt="" class="logoHeader")
-      nav 
-        ul(class="ulHeader")
-          li: a(href="/turnos/listarTurnos") Ver Turnos
-          li: a(href="/secretaria/crearListaEspera") Crear espera
-          li: a(href="/secretaria/listarEspera") Lista de espera
-          li: a(href="/secretaria/gestionTurno") Crear Turno
-          li: a(href="/agendas/crear") Crear Agenda
-          li: a(href="/agendas/ausencias/form") Cargar/Borrar Ausencia
-          li: a(href="javascript:void(0);" id="logoutButton") Cerrar Sesión
+header(class="headerSecre")
+      a(href="http://localhost:3000/secretaria/home" rel="noopener noreferrer" class="aHeaderSecre"): img(src="/img/agenda.png" alt="" class="logoHeaderSecre")
+      nav(class="navHeaderSecre") 
+        ul(class="ulHeaderSecre")
+          li(class="liHeaderSecre"): a(href="/turnos/listarTurnos" class="aLiHeaderSecre") Ver Turnos
+          li(class="liHeaderSecre"): a(href="/secretaria/crearListaEspera" class="aLiHeaderSecre") Crear espera
+          li(class="liHeaderSecre"): a(href="/secretaria/listarEspera" class="aLiHeaderSecre") Lista de espera
+          li(class="liHeaderSecre"): a(href="/secretaria/gestionTurno" class="aLiHeaderSecre") Crear Turno
+          li(class="liHeaderSecre"): a(href="/agendas/crear" class="aLiHeaderSecre") Crear Agenda
+          li(class="liHeaderSecre"): a(href="/agendas/ausencias/form" class="aLiHeaderSecre") Cargar/Borrar Ausencia
+          li(class="liHeaderSecre"): a(href="javascript:void(0);" id="logoutButton" class="aLiHeaderSecre") Cerrar Sesión
