--- a/views/secretaria/secretariaListaEspera.pug
+++ b/views/secretaria/secretariaListaEspera.pug
@@ -6,11 +6,11 @@ html
     link(rel='stylesheet', href='/css/footer.css')
     link(rel='stylesheet', href='/css/headerSecretaria.css')
     link(rel='stylesheet', href='https://cdn.datatables.net/1.13.4/css/jquery.dataTables.min.css')
-  body
+  body(class="bodySecreListaEspera")
     include ../includes/headerSecretaria
 
-    main
-      h2 Lista de Espera
+    main(class="mainSecreListaEspera")
+      h2(class="h2SecreListaEspera") Lista de Espera
 
       if lista.length
         table#listaEsperaTable
@@ -31,9 +31,9 @@ html
                 td= item.nombre_medico
                 td= item.especialidad
                 td
-                      button.btn-eliminar(type="button" data-id=item.id class="btn-eliminar") Eliminar
+                      button(type="button" data-id=item.id class="btnEliminarSecreListaEspera") Eliminar
       else
-        p No hay pacientes en lista de espera.
+        p(class="pSecreListaEspera") No hay pacientes en lista de espera.
 
     include ../includes/footer
     script(src="/js/logout.js")
