--- a/public/css/footer.css
+++ b/public/css/footer.css
@@ -1,77 +1,64 @@
-html, body {
-  height: 100%;
-  margin: 0;
-  display: flex;
-  flex-direction: column;
-}
-
-main {
-  flex: 1;
-}
-
-
-
 .footer {
   border-top: 1px solid rgb(129, 129, 129);
-  width: 100%;
+  width: 90vw;
   display: flex;
   justify-content: center;
   align-items: center;
   padding: 15px 0;
   background-color: #fbfbfb;
-  margin-top: auto; 
+  margin-top: 20px;
 }
 
-.sectionFooter{
-    width: 95%;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    margin-top: 5px;
+.sectionFooter {
+  width: 95%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 5px;
 }
 
-.articleFooter{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .spanFooter{
-    font-weight: 600;
-  }
-
-ul{
-    font-size: larger;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    padding: 0;
-    margin: 0;
-    gap: 20px;
+.articleFooter {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
-li{
-    list-style-type: none;
-    font-size: medium;
-    text-decoration: none;
+.spanFooter {
+  font-weight: 600;
 }
 
-a{
-    text-decoration: none;
-    color: black;
-    font-weight:100;
-    font-size: 15px;
+.ulFooter {
+  font-size: larger;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding: 0;
+  margin: 0;
+  gap: 20px;
 }
 
-a:hover{
-    text-decoration:dotted;
-    color: #daa761;
+.liFooter {
+  list-style-type: none;
+  font-size: medium;
+  text-decoration: none;
 }
 
-.logoFooter{
-    width: 80px;
-    height: 80px;
+.aLiFooter {
+  text-decoration: none;
+  color: black;
+  font-weight: 100;
+  font-size: 15px;
+}
+
+.aLiFooter:hover {
+  text-decoration: dotted;
+  color: #daa761;
+}
+
+.logoFooter {
+  width: 80px;
+  height: 80px;
 }
