--- a/public/css/secretariaListarEspera.css
+++ b/public/css/secretariaListarEspera.css
@@ -1,21 +1,13 @@
-
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-body {
-  background-color: #f0f4f8;
+.bodySecreListaEspera {
+  background-color: red;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   color: #2c3e50;
-  padding: 20px 30px;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
 }
 
-h2 {
+.h2SecreListaEspera {
   font-size: 2rem;
   text-align: center;
   margin-bottom: 30px;
@@ -48,7 +40,7 @@ h2 {
   background-color: #f1f9ff;
 }
 
-p {
+.pSecreListaEspera {
   text-align: center;
   font-size: 1.2rem;
   margin-top: 40px;
@@ -65,7 +57,7 @@ p {
   font-size: 0.95rem;
 }
 
-.btn-eliminar {
+.btnEliminarSecreListaEspera {
   display: inline-block;
   padding: 4px 10px;
   background-color: #007bff;
@@ -75,6 +67,6 @@ p {
   font-size: 0.9rem;
 }
 
-.btn-eliminar:hover {
+.btnEliminarSecreListaEspera:hover {
   background-color: #0056b3;
 }
