--- a/views/secretaria/secretariaTurnos.pug
+++ b/views/secretaria/secretariaTurnos.pug
@@ -6,19 +6,19 @@ html
     link(rel="stylesheet" href="/css/footer.css")
     link(rel="stylesheet" href="/css/headerSecretaria.css")
     link(rel="stylesheet" href="https://cdn.datatables.net/1.13.6/css/jquery.dataTables.min.css")
-  body
+  body(class="bodySecreTurno")
     include ../includes/headerSecretaria
-    h1 ¡Bienvenida, secretaria!
-    h2 Lista de turnos
-    form(method="get" action="/turnos/listarTurnos" class="filter-form")
-      input(type="text" name="paciente" placeholder="Buscar paciente")
-      input(type="text" name="profesional" placeholder="Buscar profesional")
-      select(name="sucursal")
-        option(value="") Todas las sucursales
+    h1(class="h1SecreTurno") ¡Bienvenida, secretaria!
+    h2(class="h2SecreTurno") Lista de turnos
+    form(method="get" action="/turnos/listarTurnos" class="formSecreTurno")
+      input(type="text" name="paciente" placeholder="Buscar paciente" class="inputSecreTurno")
+      input(type="text" name="profesional" placeholder="Buscar profesional" class="inputSecreTurno")
+      select(name="sucursal" class="selectSecreTurno")
+        option(value="" class="optionSecreTurno") Todas las sucursales
           each s in sucursales
-            option(value=s.nombre)= s.nombre
-      button(type="submit") Filtrar
-    section.sectionMain
+            option(value=s.nombre class="optionSecreTurno")= s.nombre
+      button(type="submit" class="buttonSecreTurno") Filtrar
+    section(class="sectionSecreTurnos")
       if turnos && turnos.length
         table#tablaTurnos.tableTurnos
           thead
@@ -48,16 +48,16 @@ html
                 td
                   if turno.dni_foto_url
                     a(href=turno.dni_foto_url target="_blank")
-                      img(src=turno.dni_foto_url alt="DNI Foto" class="dni-foto" width="70" height="50")
+                      img(src=turno.dni_foto_url alt="DNI Foto" class="dniSecreTurno" width="70" height="50")
                   else
                     p Foto no disponible
                 td= turno.estado
                 td
-                  a(href=`/turnos/editarTurno/${turno.id}` class="btn-editar") Cambiar estado
+                  a(href=`/turnos/editarTurno/${turno.id}` class="btnEditarSecreTurno") Cambiar estado
                 td
-                  a(href=`/turnos/detalles/${turno.id}` class="btn-editar") Detalles
+                  a(href=`/turnos/detalles/${turno.id}` class="btnEditarSecreTurno") Detalles
                 td
-                  a(href=`/turnos/trasladar/${turno.id}` class="btn-editar") Trasladar turno
+                  a(href=`/turnos/trasladar/${turno.id}` class="btnEditarSecreTurno") Trasladar turno
             else
               p No hay turnos disponibles
     include ../includes/footer
