--- a/views/secretaria/secretariaGestionTurno.pug
+++ b/views/secretaria/secretariaGestionTurno.pug
@@ -8,35 +8,36 @@ html
     link(rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css")
   body
     include ../includes/headerSecretaria
-    h1 ¡Bienvenida, secretaria!
-    form(action="/turnos/crear" method="POST" class="formTurnos" enctype="multipart/form-data") 
-      h3 Selecciona un Profesional
-      if profesionales && profesionales.length
-        select(name="profesional_especialidad_id" id="profesional" required)
-          option(value="" selected disabled) Selecciona un profesional
-            each profesional in profesionales
-              option(value=profesional.id)= `${profesional.id}  ${profesional.nombre_completo} / ${profesional.especialidad}`
-      else
-        p no se encontraron profesionales
-      h3 selecciona un paciente
-      if pacientes && pacientes.length
-        select(name="paciente_id" required)
-          option(value="" selected disabled) Selecciona un paciente
-            each paciente in pacientes
-              option(value=paciente.id)= `${paciente.dni} - ${paciente.nombre_completo}`
-      else
-        p no se encontraron pacientes
-      label(for="fecha") Selecciona la fecha:
-      input(type="text" name="fecha" id="fecha" required)
-      label(for="horario") Selecciona un horario:
-      select(name="hora" id="horario" required)
-        option(value="" selected disabled) Selecciona un horario
-      label(for="detalle_turno") Detalle del turno:
-      textarea(name="detalle_turno" id="detalle_turno" rows="4" placeholder="Detalles adicionales del turno" required)
-      input(type="hidden" name="estado" value="Confirmado")
-      label(for="dni_foto") Subí la fotocopia del DNI:
-      input(type="file" name="dni_foto" id="dni_foto" accept="image/*" required)
-      button(type="submit") Crear Turno
+    main(class="mainSecreGestionTurno")
+      h2 Crear Turno
+      form(action="/turnos/crear" method="POST" class="formTurnos" enctype="multipart/form-data") 
+        h3 Selecciona un Profesional
+        if profesionales && profesionales.length
+          select(name="profesional_especialidad_id" id="profesional" required)
+            option(value="" selected disabled) Selecciona un profesional
+              each profesional in profesionales
+                option(value=profesional.id)= `${profesional.id}  ${profesional.nombre_completo} / ${profesional.especialidad}`
+        else
+          p no se encontraron profesionales
+        h3 selecciona un paciente
+        if pacientes && pacientes.length
+          select(name="paciente_id" required)
+            option(value="" selected disabled) Selecciona un paciente
+              each paciente in pacientes
+                option(value=paciente.id)= `${paciente.dni} - ${paciente.nombre_completo}`
+        else
+          p no se encontraron pacientes
+        label(for="fecha") Selecciona la fecha:
+        input(type="text" name="fecha" id="fecha" required)
+        label(for="horario") Selecciona un horario:
+        select(name="hora" id="horario" required)
+          option(value="" selected disabled) Selecciona un horario
+        label(for="detalle_turno") Detalle del turno:
+        textarea(name="detalle_turno" id="detalle_turno" rows="4" placeholder="Detalles adicionales del turno" required)
+        input(type="hidden" name="estado" value="Confirmado")
+        label(for="dni_foto") Subí la fotocopia del DNI:
+        input(type="file" name="dni_foto" id="dni_foto" accept="image/*" required)
+        button(type="submit") Crear Turno
     include ../includes/footer
     script(src="/js/logout.js")
     script(src="/js/horarios.js")
