--- a/public/css/secretariaListarEspera.css
+++ b/public/css/secretariaListarEspera.css
@@ -1,10 +1,18 @@
 .bodySecreListaEspera {
-  background-color: red;
+  background-color: #fbfbfb;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   color: #2c3e50;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
+  align-items: center;
+}
+
+.mainSecreListaEspera {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .h2SecreListaEspera {
@@ -15,7 +23,7 @@
 }
 
 #listaEsperaTable {
-  width: 100%;
+  width: 80vw;
   border-collapse: collapse;
   background-color: white;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.05);
@@ -26,6 +34,7 @@
 #listaEsperaTable thead {
   background-color: #3498db;
   color: white;
+  gap: 10px;
 }
 
 #listaEsperaTable th,
