--- a/views/secretaria/secretariaCrearListaEspera.pug
+++ b/views/secretaria/secretariaCrearListaEspera.pug
@@ -5,32 +5,33 @@ html
     link(rel="stylesheet" href="/css/secretariaCrearEspera.css")
     link(rel="stylesheet" href="/css/footer.css")
     link(rel="stylesheet" href="/css/headerSecretaria.css")
-  body
+  body(class="bodySecreCrearEspera")
     include ../includes/headerSecretaria
 
-    h2 Crear entrada en Lista de Espera
+    main(class="mainSecreCrearEspera")
+      h2(class="h2SecreCrearEspera") Crear entrada en Lista de Espera
 
-    form(action="/secretaria/crearEspera" method="POST" class="formEspera")
-      label(for="paciente_id") Selecciona un Paciente:
-      if pacientes && pacientes.length
-        select(name="paciente_id" required)
-          option(value="" selected disabled) Selecciona un paciente
-          each paciente in pacientes
-            option(value=paciente.id)= paciente.nombre_completo
-      else
-        p No se encontraron pacientes.
+      form(action="/secretaria/crearEspera" method="POST" class="formCrearEspera")
+        label(for="paciente_id") Selecciona un Paciente:
+        if pacientes && pacientes.length
+          select(name="paciente_id" required)
+            option(value="" selected disabled) Selecciona un paciente
+            each paciente in pacientes
+              option(value=paciente.id)= paciente.nombre_completo
+        else
+          p No se encontraron pacientes.
 
-      label(for="profesional_especialidad_id") Selecciona un Profesional:
-      if profesionales && profesionales.length
-        select(name="profesional_especialidad_id" required)
-          option(value="" selected disabled) Selecciona un profesional
-          each profesional in profesionales
-            option(value=profesional.id)= profesional.nombre_completo + ' / ' + profesional.especialidad
-      else
-        p No se encontraron profesionales.
+        label(for="profesional_especialidad_id") Selecciona un Profesional:
+        if profesionales && profesionales.length
+          select(name="profesional_especialidad_id" required)
+            option(value="" selected disabled) Selecciona un profesional
+            each profesional in profesionales
+              option(value=profesional.id)= profesional.nombre_completo + ' / ' + profesional.especialidad
+        else
+          p No se encontraron profesionales.
 
-      .botones
-        button(type="submit") Agregar a Lista de Espera
+        .botones
+          button(type="submit") Agregar a Lista de Espera
 
     include ../includes/footer
     script(src="/js/logout.js")
